FEATURE: UI   | Tooltip for Health Icon [TuxPaper]
FEATURE: UI   | New language: Japanese [Gouss]

CHANGE: Core | Core update checker now uses aelitis.com server to grab latest version instead of SF's one [Gudy]
CHANGE: Plug | Tracker web plugin configuration moved to plugin config from core config  [Parg]

BUGFIX: Core | Fix for Library Paths using single quotes [Parg]
BUGFIX: Core | Fixed shared plugin dir location on OSX [Parg]
BUGFIX: Core | File Open dialogs now correctly remember their last path [Nolar]
BUGFIX: Core | Plugin loader picking up .zip files instead of corresponding .jar files [Parg]
BUGFIX: Core | Don't delete the imported .torrent file if the import dir happens to also be the Save torrent dir [Nolar]
BUGFIX: Core | Torrents leave READY state quicker after other torrents are re-queued [TuxPaper]
BUGFIX: UI   | # Column now on by default again [TuxPaper]
BUGFIX: UI   | Fix for Bug #966867: Context Menu not appearing after setting up columns on Linux [TuxPaper]
BUGFIX: UI   | IP column now sorts by hex groups [TuxPaper]
BUGFIX: UI   | Fix for .torrent icons with new Azureus.exe [Parg]
BUGFIX: UI   | Fix for text color on some Table cells not moving when row moved [TuxPaper]
BUGFIX: UI   | Moving torrent from Uncategorized category to new category now removes the row from the display [TuxPaper]
BUGFIX: UI   | Fix for empty table rows appearing in Peers Details tab and Pieces tab [TuxPaper]


30.05.04 | Azureus 2.1.0.0

FEATURE: Core | Ability to limit global download speed [Parg]
FEATURE: Core | Added ability to automatically exclude files when making torrents (e.g. .DS_Store & Thumbs.db) [Parg]
FEATURE: Core | Caching of peer info to disk for quick restarts if tracker is unavailable [Parg]
FEATURE: Core | Detection of plugin updates [Parg]
FEATURE: Core | HTTP scrapes to same tracker combined into one request if tracker supports it [TuxPaper]