@@ -15,6 +15,7 @@ FEATURE: UI   | New language: Japanese [Gouss]
 
 CHANGE: Core | Core update checker now uses aelitis.com server to grab latest version instead of SF's one [Gudy]
 CHANGE: Plug | Tracker web plugin configuration moved to plugin config from core config  [Parg]
+CHANGE: UI   | About Window is closeable by hitting the 'ESC' key [Gudy]
 
 BUGFIX: Core | Fix for Library Paths using single quotes [Parg]
 BUGFIX: Core | Fixed shared plugin dir location on OSX [Parg]
@@ -29,7 +30,8 @@ BUGFIX: UI   | Fix for .torrent icons with new Azureus.exe [Parg]
 BUGFIX: UI   | Fix for text color on some Table cells not moving when row moved [TuxPaper]
 BUGFIX: UI   | Moving torrent from Uncategorized category to new category now removes the row from the display [TuxPaper]
 BUGFIX: UI   | Fix for empty table rows appearing in Peers Details tab and Pieces tab [TuxPaper]
-
+BUGFIX: UI   | Windows : Tray Icon should come back after explorer crash (needs latest SWT build) [SWT team, Gudy]
+BUGFIX: UI   | 192 bytes memory leak fixed on OSX [SWT Team, Gudy]
 
 30.05.04 | Azureus 2.1.0.0
 
